syntax = "proto3";
package DomainServices.OfferService;
option csharp_namespace = "DomainServices.OfferService.Contracts";

import "google/protobuf/wrappers.proto";
import "GrpcDecimal.proto";
import "NullableGrpcDecimal.proto";
import "GrpcDate.proto";
import "NullableGrpcDate.proto";
import "Messages/Types.proto";

message MortgageOfferFullData {
	MortgageOfferBasicParameters BasicParameters = 1;
	MortgageOfferSimulationInputs SimulationInputs = 2;
	MortgageOfferSimulationResults SimulationResults = 3;
}

message MortgageOfferBasicParameters {
	cis.types.NullableGrpcDecimal FinancialResourcesOwn  = 1;
	cis.types.NullableGrpcDecimal FinancialResourcesOther  = 2;
	cis.types.NullableGrpcDate GuaranteeDateTo = 3;
	google.protobuf.Int32Value StatementTypeId = 4;
}

message MortgageOfferSimulationInputs {
	cis.types.NullableGrpcDate ExpectedDateOfDrawing = 1;
	int32 ProductTypeId = 2;
	int32 LoanKindId = 3;
	cis.types.GrpcDecimal LoanAmount = 4;
	google.protobuf.Int32Value LoanDuration = 5;			//nullable kvůli validaci na NotNull
	cis.types.GrpcDate GuaranteeDateFrom = 6;
	cis.types.NullableGrpcDecimal InterestRateDiscount = 7;
	google.protobuf.Int32Value FixedRatePeriod = 8;			//nullable kvůli validaci na NotNull
	cis.types.GrpcDecimal CollateralAmount = 9;
	google.protobuf.Int32Value DrawingTypeId = 10; 
	google.protobuf.Int32Value DrawingDurationId = 11;
	google.protobuf.Int32Value PaymentDay = 12;
	google.protobuf.BoolValue IsEmployeeBonusRequested = 13;
	Developer Developer = 14;
	repeated LoanPurpose LoanPurposes = 15;
	FeeSettings FeeSettings = 16;
	InputMarketingAction MarketingActions = 17;
	repeated InputFee Fees = 18;
	RiskLifeInsurance RiskLifeInsurance = 19;
	RealEstateInsurance RealEstateInsurance = 20;
}

message MortgageOfferSimulationResults {
	cis.types.GrpcDecimal LoanAmount = 1;
	int32 LoanDuration = 2;
	cis.types.NullableGrpcDate LoanDueDate = 3;
	cis.types.NullableGrpcDecimal LoanPaymentAmount = 4;
	cis.types.GrpcDecimal LoanInterestRateProvided = 5;
	google.protobuf.Int32Value EmployeeBonusLoanCode = 6;
	cis.types.GrpcDecimal LoanToValue = 7;
	cis.types.NullableGrpcDate ContractSignedDate = 8;
	cis.types.GrpcDate DrawingDateTo = 9;
	cis.types.NullableGrpcDate AnnuityPaymentsDateFrom = 10;
	google.protobuf.Int32Value AnnuityPaymentsCount = 11;
	cis.types.GrpcDecimal Aprc = 12;
	cis.types.GrpcDecimal LoanTotalAmount = 13;
	cis.types.GrpcDecimal LoanInterestRate  = 14;
	cis.types.GrpcDecimal LoanInterestRateAnnounced = 15;
	int32 LoanInterestRateAnnouncedType = 16;
	cis.types.GrpcDecimal EmployeeBonusDeviation = 17;
	cis.types.GrpcDecimal MarketingActionsDeviation = 18;
	repeated SimulationResultWarning Warnings = 19;
}

message MortgageOfferAdditionalSimulationResults {
	repeated PaymentScheduleSimple PaymentScheduleSimple = 1;
	repeated ResultMarketingAction MarketingActions = 2;
	repeated ResultFee Fees = 3;
}

message MortgageOfferCreditWorthinessSimpleInputs {
	cis.types.NullableGrpcDecimal TotalMonthlyIncome = 1;
	ExpensesSummaryObject ExpensesSummary = 2;
	ObligationsSummaryObject ObligationsSummary = 3;
	google.protobuf.Int32Value ChildrenCount = 4;

	message ExpensesSummaryObject {
		cis.types.NullableGrpcDecimal Rent = 1;
		cis.types.NullableGrpcDecimal Other = 2;
	}

	message ObligationsSummaryObject {
		cis.types.NullableGrpcDecimal LoansInstallmentsAmount = 1;
		cis.types.NullableGrpcDecimal CreditCardsAmount = 2;
		cis.types.NullableGrpcDecimal AuthorizedOverdraftsTotalAmount = 3;
	}
}

message MortgageOfferCreditWorthinessSimpleResults {
	google.protobuf.Int32Value InstallmentLimit = 1;
	google.protobuf.Int32Value MaxAmount = 2;
	google.protobuf.Int32Value RemainsLivingAnnuity = 3;
	google.protobuf.Int32Value RemainsLivingInst = 4;
	WorthinessResults WorthinessResult = 5;

	enum WorthinessResults {
		Unknown = 0;
		Success = 1;
		Failed = 2;
	}
}